# NES-Emulator

./: Cargo.toml
src/: bus.rs  cpu.rs  main.rs  memory.rs  opcode.rs  processor.rs  register.rs
src/gui/: debug.rs  mod.rs  view.rs  viewbuild.rs
src/memory/: bus.rs  mod.rs  writable.rs
src/register/: mod.rs  regchar.rs  regword.rs
