[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# SDL2 Dependencies
sdl2 = "0.35"

# Imgui Dependencies ------------------------------------
# Imgui
#imgui = "0.8.2"

# Imgui renderer
#imgui-wgpu = "0.20.0" # Helps imgui translate to wgpu
#wgpu = "0.13.1"

# Imgui backend
#winit = "0.27.3"
# -------------------------------------------------------
